--- a/src/app/components/trip-details/trip-details.component.html
+++ b/src/app/components/trip-details/trip-details.component.html
@@ -34,19 +34,28 @@
             ) {
               <app-itinerary-form
                 [activity]="activityToEdit()"
-                (cancelClicked)="cleatActivityToEdit()"
+                (cancelClicked)="clearActivityToEdit()"
                 (outputActivity)="updateActivity($event)" />
             }
           }
         } @else {
-          <p>Your trip is looking quite sketch without any activities 👀</p>
+          <p class="mb-2">
+            It seems like you have nothing to do. Create an activity below.
+          </p>
+          <app-itinerary-form
+            (cancelClicked)="clearActivityToEdit()"
+            (outputActivity)="addActivity($event)" />
         }
       </div>
     </div>
     <div class="flex w-full justify-end gap-2 p-4 pt-0">
+      <button class="btn btn-error" (click)="confirmTripDelete()">
+        Delete
+      </button>
+      <button class="btn btn-warning" (click)="editTrip()">Edit</button>
       <button class="btn btn-success" (click)="returnHome()">Done</button>
     </div>
-    <dialog #confirmModal class="modal">
+    <dialog #confirmDeleteActivityModal class="modal">
       <div class="modal-box">
         <h3 class="text-lg font-bold">Hold on!</h3>
         <p class="py-4">Are you sure you would like to delete this activity?</p>
@@ -58,6 +67,20 @@
             <button class="btn btn-error" (click)="deleteActivity()">
               Delete
             </button>
+          </div>
+        </div>
+      </div>
+    </dialog>
+    <dialog #confirmDeleteTripModal class="modal">
+      <div class="modal-box">
+        <h3 class="text-lg font-bold">Hold on!</h3>
+        <p class="py-4">Are you sure you would like to delete this trip?</p>
+        <div class="modal-action">
+          <div class="flex gap-2">
+            <button class="btn btn-warning" (click)="closeModal()">
+              Cancel
+            </button>
+            <button class="btn btn-error" (click)="deleteTrip()">Delete</button>
           </div>
         </div>
       </div>
