--- a/src/app/components/itinerary-details/itinerary-details.component.html
+++ b/src/app/components/itinerary-details/itinerary-details.component.html
@@ -6,10 +6,10 @@
   @if (activity()) {
     <div class="flex flex-col gap-2 p-4">
       <h1 class="flex items-center gap-2 text-2xl font-bold">
-        {{ activity().title }}
-        @if (activity().tag) {
+        {{ activity()?.title }}
+        @if (activity()?.tag) {
           <div class="badge bg-blue-700 p-3 text-white">
-            {{ activity().tag }}
+            {{ activity()?.tag }}
           </div>
         }
       </h1>
@@ -22,18 +22,18 @@
         <p>
           Cost:
           {{
-            activity().cost | currency: activity().currency : 'symbol-narrow'
+            activity()?.cost | currency: activity()?.currency : 'symbol-narrow'
           }}
         </p>
-        @if (activity().currency !== 'ZAR') {
+        @if (activity()?.currency !== 'ZAR') {
           <p>
             Cost in Rand (ZAR):
             {{ costInZAR() | currency: 'ZAR' : 'symbol-narrow' }}
           </p>
         }
-        @if (activity().notes) {
+        @if (activity()?.notes) {
           <p class="mt-4">Notes:</p>
-          <p>{{ activity().notes }}</p>
+          <p>{{ activity()?.notes }}</p>
         }
       </div>
       <div class="fixed bottom-4 right-4 flex gap-2">
