--- a/src/app/components/error/error.component.html
+++ b/src/app/components/error/error.component.html
@@ -6,8 +6,6 @@
     <p class="text-center text-2xl">
       Please check the URL or click the button below to go back to the homepage.
     </p>
-    <button class="btn w-fit bg-blue-400" (click)="handleHomeClick()">
-      Home
-    </button>
+    <a type="button" class="btn w-fit bg-blue-400" routerLink="/home">Home</a>
   </div>
 </div>
