--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -77,12 +77,13 @@
           </button>
         </form>
         <p class="text-center text-gray-400">
-          Dont have an account?
-          <button
+          Don't have an account?
+          <a
+            type="button"
             class="text-slate-950 underline hover:scale-105 hover:text-slate-700"
-            (click)="navToSignUp()">
+            routerLink="/sign-up">
             Sign Up
-          </button>
+          </a>
         </p>
       </div>
     </mat-card-content>
