--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -34,11 +34,12 @@
             </div>
           </div>
         }
-        <button
+        <a
+          type="button"
           class="btn btn-circle fixed bottom-4 right-4 border-2 border-blue-500"
-          (click)="handleAddTripClick()">
+          routerLink="/new-trip">
           +
-        </button>
+        </a>
       </div>
       <dialog #confirmModal class="modal">
         <div class="modal-box">
@@ -60,11 +61,12 @@
       <div class="flex flex-col items-center overflow-x-hidden p-4">
         No trips
       </div>
-      <button
+      <a
+        type="button"
         class="btn btn-circle fixed bottom-4 right-4 border-2 border-blue-500"
-        (click)="handleAddTripClick()">
+        routerLink="/new-trip">
         +
-      </button>
+      </a>
     }
   }
 }
