--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -92,13 +92,14 @@
             Register Now
           </button>
         </form>
-        <p class="text-gray-400">
+        <p class="text-center text-gray-400">
           Already have an account?
-          <button
+          <a
+            type="button"
             class="text-slate-950 underline hover:scale-105 hover:text-slate-700"
-            (click)="navToLogIn()">
+            routerLink="/log-in">
             Log In
-          </button>
+          </a>
         </p>
       </div>
     </mat-card-content>
