--- a/src/app/components/alter-trip/alter-trip.component.html
+++ b/src/app/components/alter-trip/alter-trip.component.html
@@ -36,7 +36,7 @@
           <div class="flex flex-wrap gap-4">
             <app-itinerary-form
               class="w-full"
-              [activity]="activityToEdit() ?? undefined"
+              [activity]="activityToEdit()"
               (cancelClicked)="cancelEdit()"
               (outputActivity)="updateActivity($event)" />
           </div>
