WIP: 🚧 Implemented basic calendar. No functionality yet

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,6 +40,9 @@ $bon-voyage-theme: mat.define-light-theme(
 @tailwind components;
 @tailwind utilities;
 
+@import '../node_modules/ng-zorro-antd/ng-zorro-antd.min.css';
+@import '../node_modules/ng-zorro-antd/calendar/style/index.min.css';
+
 html,
 body {
   height: 100%;
