--- a/src/app/components/trip-details/trip-details.component.html
+++ b/src/app/components/trip-details/trip-details.component.html
@@ -6,6 +6,7 @@
   @if (trip$ | async; as trip) {
     <div class="flex flex-col gap-2 p-4">
       <h1 class="text-2xl font-bold">{{ trip.title }}</h1>
+      <nz-calendar [nzFullscreen]="false"></nz-calendar>
       <div>
         <p>Start Date: {{ trip.startDate | date }}</p>
         <p>End Date: {{ trip.endDate | date }}</p>
