--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
           type="button"
           class="btn btn-ghost h-8 min-h-8 text-sm"
           aria-label="Log in button"
-          routerLink="log-in">
+          routerLink="/log-in">
           Log In
         </a>
         <a
