--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,9 +44,10 @@ $bon-voyage-theme: mat.define-light-theme(
 @import '../node_modules/ng-zorro-antd/calendar/style/index.min.css';
 
 .ant-picker-cell-in-view.ant-picker-cell-selected .ant-picker-cell-inner {
-  color: black;
-  background: #3b83f694;
-  border-radius: 100%;
+  color: #3b83f6;
+  background: none;
+  text-decoration: underline;
+  font-weight: bold;
 }
 .ant-picker-cell-in-view.ant-picker-cell-today .ant-picker-cell-inner::before {
   border-radius: 100%;
@@ -89,4 +90,8 @@ body {
 
 .mat-mdc-form-field-error-wrapper {
   padding: 0 0 !important;
+}
+
+td {
+  vertical-align: top;
 }
