feat: ✨ Implemented basic map that shows activity location as a marker.

--- a/src/app/components/itinerary-details/itinerary-details.component.html
+++ b/src/app/components/itinerary-details/itinerary-details.component.html
@@ -13,6 +13,7 @@
           </div>
         }
       </h1>
+      <app-map [inputActivity]="activity()"></app-map>
       <div>
         <p>Start Date: {{ newStartDate() | date }}</p>
         <p>End Date: {{ newEndDate() | date }}</p>
