feat: ✨ Implemented ability choose location on map for activity.

--- a/src/app/components/itinerary-form/itinerary-form.component.html
+++ b/src/app/components/itinerary-form/itinerary-form.component.html
@@ -79,12 +79,14 @@
         <mat-error>Please enter a valid date range</mat-error>
       </mat-form-field>
 
-      <!-- TODO: Implement map -->
-      <!-- <div class="mb-4 flex flex-col">
-        <button type="button" class="btn mb-2 w-fit self-center bg-white">
+      <div class="mb-4 flex flex-col">
+        <button
+          type="button"
+          class="btn mb-2 w-fit self-center bg-white"
+          (click)="openMapModal()">
           Choose location on map
         </button>
-      </div> -->
+      </div>
 
       <div class="flex items-center gap-2">
         <mat-form-field hideRequiredMarker="true">
@@ -149,4 +151,28 @@
     </div>
   </div>
   <div class="card-actions justify-end"></div>
+  <dialog #mapModal class="modal">
+    <div class="modal-box">
+      <form method="dialog" class="flex justify-end">
+        <button
+          type="button"
+          class="btn btn-circle btn-ghost btn-sm"
+          (click)="closeMapModal()">
+          <mat-icon>close</mat-icon>
+        </button>
+      </form>
+      <app-map
+        (locationsChanged)="locationsChanged($event)"
+        [inputLocations]="locations()"></app-map>
+      <p class="py-4">Tap on the ✕ to close.</p>
+      <form method="dialog" class="flex justify-end">
+        <button
+          type="button"
+          class="btn btn-success btn-sm"
+          (click)="closeMapModal()">
+          Done
+        </button>
+      </form>
+    </div>
+  </dialog>
 </div>
