--- a/src/app/components/itinerary-form/itinerary-form.component.html
+++ b/src/app/components/itinerary-form/itinerary-form.component.html
@@ -28,7 +28,7 @@
               ✕
             </button>
           </form>
-          <h3 class="text-lg font-bold">Create Tag!</h3>
+          <h3 class="text-lg font-bold">Create a Tag!</h3>
           <mat-form-field hideRequiredMarker="true" class="mt-2 w-full">
             <mat-label>Tag:</mat-label>
             <input
@@ -161,6 +161,7 @@
           <mat-icon>close</mat-icon>
         </button>
       </form>
+      <h3 class="text-lg font-bold">Choose a start and end location.</h3>
       <app-map
         (locationsChanged)="locationsChanged($event)"
         [inputLocations]="locations()"></app-map>
