fix: 🐛 Made the start and end location optional and only show map if there are locations.

--- a/src/app/components/itinerary-details/itinerary-details.component.html
+++ b/src/app/components/itinerary-details/itinerary-details.component.html
@@ -13,7 +13,9 @@
           </div>
         }
       </h1>
-      <app-map [inputActivity]="activity()"></app-map>
+      @if (activity()?.startLocation || activity()?.endLocation) {
+        <app-map [inputActivity]="activity()"></app-map>
+      }
       <div>
         <p>Start Date: {{ newStartDate() | date }}</p>
         <p>End Date: {{ newEndDate() | date }}</p>
