--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -23,13 +23,16 @@
               cdkDragLockAxis="x"
               (cdkDragReleased)="resetPosition($event)"
               cdkDragBoundary=".boundary">
-              @if (trip.startDate && trip.endDate && trip.duration) {
-                <app-trip-card
-                  [tripTitle]="trip.title"
-                  [startDate]="trip.startDate"
-                  [endDate]="trip.endDate"
-                  [duration]="trip.duration"
-                  [totalCost]="trip.totalCost ?? 0" />
+              @if (baseCurrency$ | async; as baseCurrency) {
+                @if (trip.startDate && trip.endDate && trip.duration) {
+                  <app-trip-card
+                    [tripTitle]="trip.title"
+                    [startDate]="trip.startDate"
+                    [endDate]="trip.endDate"
+                    [duration]="trip.duration"
+                    [totalCost]="trip.totalCost ?? 0"
+                    [currency]="baseCurrency ?? 'ZAR'" />
+                }
               }
             </div>
           </div>
