--- a/src/app/components/error/error.component.html
+++ b/src/app/components/error/error.component.html
@@ -6,6 +6,8 @@
     <p class="text-center text-2xl">
       Please check the URL or click the button below to go back to the homepage.
     </p>
-    <a type="button" class="btn w-fit bg-blue-400" routerLink="/home">Home</a>
+    <a type="button" class="btn w-fit border-0 bg-blue-400" routerLink="/home">
+      Home
+    </a>
   </div>
 </div>
