--- a/src/app/components/itinerary-card/itinerary-card.component.html
+++ b/src/app/components/itinerary-card/itinerary-card.component.html
@@ -1,5 +1,5 @@
 <div
-  class="mb-4 grid grid-rows-3 gap-2 rounded-xl border-2 border-blue-400 bg-blue-300 p-4"
+  class="mb-4 grid grid-rows-3 gap-2 rounded-xl bg-neutral-800 p-4 text-white shadow-md shadow-white/20"
   (click)="handleItineraryClick($event)">
   <div class="flex justify-between">
     @if (newStartDate && newEndDate) {
