--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <p>
-  <mat-toolbar class="flex justify-between">
+  <mat-toolbar class="flex justify-between shadow-md shadow-white/20">
     <div class="flex items-center">
       <button class="btn btn-ghost -ml-2 px-2" aria-label="Menu button">
-        <mat-icon>menu</mat-icon>
+        <mat-icon class="text-white">menu</mat-icon>
       </button>
       <a
         type="button"
-        class="btn btn-ghost gap-0 p-0 text-xl text-blue-800 md:px-4 md:text-2xl"
+        class="btn btn-ghost gap-0 p-0 text-xl text-white md:px-4 md:text-2xl"
         routerLink="/home">
         Bon
         <span class="text-blue-400">Voyage</span>
@@ -15,7 +15,7 @@
     <div class="flex items-center gap-0 md:gap-4">
       @if (isLoggedIn$ | async) {
         <button
-          class="btn btn-ghost h-8 min-h-8 text-sm text-blue-800"
+          class="btn btn-ghost h-8 min-h-8 text-sm text-blue-400"
           aria-label="Log in button"
           (click)="signOut()">
           Log Out
@@ -23,14 +23,14 @@
       } @else {
         <a
           type="button"
-          class="btn btn-ghost h-8 min-h-8 text-sm"
+          class="btn btn-ghost h-8 min-h-8 text-sm text-blue-400"
           aria-label="Log in button"
           routerLink="/log-in">
           Log In
         </a>
         <a
           type="button"
-          class="btn h-8 min-h-8 bg-blue-400"
+          class="btn h-8 min-h-8 border-0 bg-blue-400"
           aria-label="Sign up button"
           routerLink="/sign-up">
           Sign Up
