--- a/src/app/components/itinerary-details/itinerary-details.component.html
+++ b/src/app/components/itinerary-details/itinerary-details.component.html
@@ -4,8 +4,8 @@
   </div>
 } @else {
   @if (activity()) {
-    <div class="flex flex-col gap-2 p-4">
-      <h1 class="flex items-center gap-2 text-2xl font-bold">
+    <div class="flex flex-col gap-2 p-4 text-white">
+      <h1 class="flex items-center gap-2 text-2xl font-bold text-white">
         {{ activity()?.title }}
         @if (activity()?.tag) {
           <div class="badge bg-blue-700 p-3 text-white">
@@ -54,7 +54,7 @@
         </button>
         <a
           type="button"
-          class="btn btn-success"
+          class="btn btn-success border-0"
           [routerLink]="['/trip', tripId()]">
           Done
         </a>
