--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,9 +1,9 @@
 <div class="flex justify-center">
   <div class="m-4 flex flex-col gap-2 text-center md:w-1/3 md:text-start">
-    <h2 class="text-3xl font-bold">
+    <h2 class="text-3xl font-bold text-blue-400">
       Discover the joy of seamless travel planning with BonVoyage!
     </h2>
-    <p class="text-2xl">
+    <p class="text-2xl text-white">
       Our intuitive trip planner empowers you to effortlessly build, organize,
       and map your custom itineraries. Say goodbye to travel hassles and hello
       to unforgettable adventures!
